# Feoo-Engine

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  compile_commands.json  imgui.ini  main.cpp  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: VkBootstrap.h.4F4243E530EE90C2.idx  VkBootstrapDispatch.h.100E2269B4DB17DF.idx  VkBootstrapFeatureChain.h.F98B1E0715B54CB9.idx  __msvc_bit_utils.hpp.61828FC18BFA01DD.idx  __msvc_chrono.hpp.286F172E36B497ED.idx  __msvc_filebuf.hpp.4856B82375E7BDA7.idx  __msvc_format_ucd_tables.hpp.BA16607B3BC80456.idx  __msvc_formatter.hpp.CC0B9887EA504269.idx  __msvc_heap_algorithms.hpp.C633D2DF3E699A05.idx  __msvc_iter_core.hpp.ACB2C19E0D3C34B0.idx  __msvc_minmax.hpp.554DAEB4C10D0F67.idx  __msvc_ostream.hpp.92906ECA37A4E41A.idx  __msvc_print.hpp.CEAEB6AEAE132C4C.idx  __msvc_ranges_tuple_formatter.hpp.D4D88A888B47F308.idx  __msvc_sanitizer_annotate_container.hpp.5B44554DA7E2FAEF.idx  __msvc_string_view.hpp.D351CCED0CC3FA6F.idx  __msvc_system_error_abi.hpp.9104349FA2B883B4.idx  __msvc_threads_core.hpp.45A9A306ACDA5AB8.idx  __msvc_tzdb.hpp.A742673343D06BF3.idx  __msvc_xlocinfo_types.hpp.08E500C36F085762.idx  _fixes.hpp.FF481572F60EB62D.idx  _vectorize.hpp.F096CBD83243ECCC.idx  algorithm.113C8D844C65C1DE.idx  array.6FA376BA3F8F1963.idx  assert.h.BF1C3ABBAC30EC9A.idx  atomic.9FDB886B215CDF5B.idx  avx10_2bf16intrin.h.7C0EC545D0710067.idx  bit.A41FE6CCFE24E795.idx  cassert.4C9DA29387A163EF.idx  cctype.061474681169F6D9.idx  cerrno.DF425899C174BC29.idx  cfloat.5EEB360D045D0B4C.idx  charconv.745E8D4BE83C9B81.idx  chrono.E5C6E5EDE17C4CDD.idx  climits.B91F4270CF0798DF.idx  clocale.3664EA9B6A4A9E43.idx  cmath.BD7AC242ED7C7F99.idx  common.hpp.63F9332A8EAABE93.idx  compare.B7648345E78F8EAF.idx  compute_common.hpp.1CFD668E3657A3AC.idx  (+274 more)
.cmake-intellisense/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
.cmake-intellisense-gnu/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Engine/: feoo_app.cpp  feoo_app.hpp  gola_app.cpp  gola_app.hpp
Engine/Core/: feoo_camera.cpp  feoo_camera.hpp  feoo_device.cpp  feoo_device.hpp  feoo_game_object.hpp  feoo_model.cpp  feoo_model.hpp  feoo_pipeline.cpp  feoo_pipeline.hpp  feoo_renderer.cpp  feoo_renderer.hpp  feoo_swap_chain.cpp  feoo_swap_chain.hpp  gola_camera.hpp  gola_game_object.hpp  gola_model.cpp  gola_model.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  render_system.cpp  render_system.hpp  scene_viewport_target.cpp  scene_viewport_target.hpp
Engine/Resources/Models/: ecy.mtl  fusee1.fbx
Engine/Scene/: scene_manager.cpp  scene_manager.hpp
Engine/Scene/Scenes/: default.scene
Engine/Scripting/: camera_script.cpp  camera_script.hpp  feoo_script.hpp  movement_script.cpp  movement_script.hpp  spin_models_script.cpp  spin_models_script.hpp
Engine/UI/: feoo_imgui.cpp  feoo_imgui.hpp  gola_imgui.cpp  gola_imgui.hpp
Engine/Window/: feoo_window.cpp  feoo_window.hpp
Engine/shaders/: compile.bat  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
